# NEARLend

./: .gitignore  BurrowLand.drawio  LICENSE  Nearlend.drawio  README.md  duyhoag.testnet.json  git_push.sh  note_defi  run_test.sh  sub.duyhoag.testnet.json
backend/: .gitignore  package-lock.json  package.json  server.js
frontend/: .eslintrc.json  .gitignore  (+5 more)
smart-contract/: .gitignore  Cargo.toml  README.md  build.sh  lib.rs
smart-contract/contract/src/: account.rs  actions.rs  asset.rs  asset_config.rs
smart-contract/res/: NEARLend.wasm  burrowland.wasm  nearlend.wasm  test_oracle.wasm
smart-contract/script-testcases/: 0_deploy.sh  1_deposit.sh  2_deposit_withdraw.sh  3_deposit_with_collateral.sh  4_deposit_collateral_adjust.sh  5_borrow.sh  6_borrow_repay.sh
smart-contract/scripts/: apr_to_rate.py
smart-contract/src/utility/main_structure/branches/farm/: build.sh
smart-contract/src/utility/main_structure/branches/improve-farm-performance/: README.md
smart-contract/src/utility/main_structure/branches/improve-farm-performance/scripts/: dev_deploy.sh
smart-contract/src/utility/main_structure/branches/tests/: Cargo.toml  build.sh
smart-contract/src/utility/main_structure/trunk/: build.sh
smart-contract/src/utility/main_structure/trunk/contract/src/: account_farm.rs  actions.rs  asset.rs  asset_view.rs  config.rs  fungible_token.rs  pool.rs  storage.rs
smart-contract/src/utility/main_structure/trunk/res/: burrowland.wasm  test_oracle.wasm
smart-contract/src/utility/main_structure/trunk/scripts/: testnet_deploy.sh
smart-contract/tests/: setup.rs
(+88 files in other folders)
