[package]
name = "NCD_playground"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[dependencies]
near-sdk = "^3.1.0"
near-sdk-macros = "^3.1.0"
serde = "^1.0.118"
near-contract-standards = "^3.1.1"
uint = { version = "0.8.3", default-features = false }

[dev-dependencies]
lazy_static = "^1.4.0"
quickcheck = "^0.9"
quickcheck_macros = "^0.9"
log = "^0.4"
env_logger = { version = "0.7.1", default-features = false }
near-crypto = { git = "https://github.com/nearprotocol/nearcore.git" }
near-primitives = { git = "https://github.com/nearprotocol/nearcore.git" }

[workspace]
members = []

